build: JDK 21, Gradle 9, a checked-in Dockerfile and CI (#3)
Brings the repository onto a supported toolchain. The image was built from
'openjdk:11-jre-slim', a deprecated image family, by the bmuschko
'docker-java-application' plugin (7.3.0, 2021) from a single 'baseImage' line,
and nothing in the repository declared a Java source or target level at all -
so the compile target silently followed whichever JDK ran Gradle.

  * Gradle 7.4.1 -> 9.8.0, Groovy 3.0.9 -> 4.0.32 (note the group id moves to
    org.apache.groovy), Spock 2.0-groovy-3.0 -> 2.3-groovy-4.0. Gradle 9 no
    longer puts the JUnit Platform launcher on the test runtime classpath, so
    that is now declared; 'junit:junit' is dropped, as nothing used it.
  * An explicit Java 21 toolchain.
  * CDK 2.7.1 -> 2.11 and commons-cli 1.5.0 -> 1.11.0.
  * The bmuschko plugin is replaced by a two-stage Dockerfile on
    eclipse-temurin 21, so 'docker build' is all CI needs. CLASSPATH keeps the
    contract the Job Definition's command relies on.
  * CI from nothing: the seven-workflow callable set the other Job
    repositories use. 'test.yaml' builds the image and runs jote against it
    with '--image-tag', so the Job tests actually execute.

Two defects surfaced while verifying this, both of which had to be fixed for
the image to be correct rather than merely to build:

  * MoleculeUtils downcast SilentChemObjectBuilder.getInstance() - declared to
    return IChemObjectBuilder - to the concrete class. From CDK 2.9 the
    singleton is a nested holder class, so the cast throws in a static
    initialiser and every descriptor fails.
  * The descriptor stream asked for parallel execution and, up to JDK 17,
    never got it: an unknown-size ORDERED spliterator over an iterator ran the
    whole pipeline on one worker thread. JDK 21 splits it across every core,
    and the shared CDK descriptor instances are not thread-safe. Against
    data/dhfr_3d.sdf that lost ring counts for roughly 200 of 756 molecules
    